--- a/src/components/form-card/components/FormCard.module.css
+++ b/src/components/form-card/components/FormCard.module.css
@@ -1,6 +1,6 @@
 .formCard {
-	width: 378px;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+	width: 328px;
+	box-shadow: 0 0 10px #00000080;
 	display: flex;
 	flex-direction: column;
 	gap: 0.25rem;
