--- a/src/components/view-popover/components/ViewPopover.module.css
+++ b/src/components/view-popover/components/ViewPopover.module.css
@@ -1,4 +1,4 @@
-.infoCard {
+.ViewPopover {
 	width: 360px;
 	max-height: calc(100vh - 40px);
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
@@ -8,7 +8,7 @@
 	display: flex;
 	flex-direction: column;
 }
-.infoCardSection {
+.ViewPopoverSection {
 	display: flex;
 	flex-direction: column;
 	flex-shrink: 1;
