--- a/lib/features/time-view/components/TimeViewHeader.module.css
+++ b/lib/features/time-view/components/TimeViewHeader.module.css
@@ -1,23 +1,7 @@
-.wrapper {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	overflow: hidden;
-}
-
-.scrollWrapper {
-	height: 100%;
-	overflow: auto;
-}
-
-.gridWrapper {
-	display: flex;
-}
-
 .headerRow {
 	position: relative;
 	display: grid;
-	grid-template-columns: repeat(7, minmax(0, 1fr));
+	grid-template-columns: repeat(1, minmax(0, 1fr));
 	font-size: 0.875rem;
 	font-weight: 600;
 	margin-left: 2.25rem;
@@ -25,13 +9,13 @@
 	&[data-sm='true'] {
 		font-size: 0.75rem;
 	}
+	&[data-isweekview='true'] {
+		grid-template-columns: repeat(7, minmax(0, 1fr));
+	}
 }
 .headerCell {
 	text-align: center;
 	border-bottom: 1px solid #ccc;
-	transition-property: background;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-	transition-duration: 750ms;
 }
 .headerLabel {
 	user-select: none;
