--- a/lib/features/time-view/TimeView.module.css
+++ b/lib/features/time-view/TimeView.module.css
@@ -13,3 +13,13 @@
 .gridWrapper {
 	display: flex;
 }
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(1, minmax(0, 1fr));
+	flex-grow: 1;
+
+	&[data-isweekview='true'] {
+		grid-template-columns: repeat(7, minmax(0, 1fr));
+	}
+}
