--- a/lib/EventsCalendar.module.css
+++ b/lib/EventsCalendar.module.css
@@ -1,16 +1,7 @@
-.wrapper {
-	display: flex;
+.calendarWrapper {
 	height: 100%;
 	width: 100%;
-}
 
-.EventsCalendar {
-	position: relative;
-	height: 100%;
-	width: 100%;
-}
-
-.wrapper {
 	::-webkit-scrollbar-track {
 		background-color: transparent;
 	}
@@ -28,4 +19,10 @@
 		height: 0.5rem;
 		min-height: 40px;
 	}
+}
+
+.calendar {
+	position: relative;
+	height: 100%;
+	width: 100%;
 }
