--- a/lib/features/default-header/HeaderButton.module.css
+++ b/lib/features/default-header/HeaderButton.module.css
@@ -10,6 +10,8 @@
 	border-radius: 0.25rem;
 	font-size: 0.75rem;
 	background: white;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+		'Segoe UI Emoji';
 	border: 0.0625rem solid transparent;
 	color: #228be6;
 	height: 1.875rem;
