Export utils within package

--- a/lib/features/time-view/components/TimeViewHeader.module.css
+++ b/lib/features/time-view/components/TimeViewHeader.module.css
@@ -15,7 +15,10 @@
 }
 .headerCell {
 	text-align: center;
-	border-bottom: 1px solid #ccc;
+
+	&[data-border='true'] {
+		border-bottom: 1px solid #ccc;
+	}
 }
 .headerLabel {
 	user-select: none;
