--- a/src/layout/PageWrapper.module.css
+++ b/src/layout/PageWrapper.module.css
@@ -1,4 +1,9 @@
 .wrapper {
-	height: 100%;
-	padding: 2rem 3rem;
+	padding: 1rem 2rem 3rem 2rem;
+}
+
+@media (min-width: 768px) {
+	.wrapper {
+		padding: 2rem 3rem 5rem 3rem;
+	}
 }
