--- a/lib/EventsCalendar.module.css
+++ b/lib/EventsCalendar.module.css
@@ -1,6 +1,9 @@
 .calendarWrapper {
 	height: 100%;
 	width: 100%;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
 
 	::-webkit-scrollbar-track {
 		background-color: transparent;
@@ -23,6 +26,6 @@
 
 .calendar {
 	position: relative;
-	height: 100%;
 	width: 100%;
+	height: 100%;
 }
