--- a/lib/EventsCalendar.module.css
+++ b/lib/EventsCalendar.module.css
@@ -1,9 +1,6 @@
 .calendarWrapper {
 	height: 100%;
 	width: 100%;
-	flex-grow: 1;
-	display: flex;
-	flex-direction: column;
 
 	::-webkit-scrollbar-track {
 		background-color: transparent;
@@ -28,4 +25,8 @@
 	position: relative;
 	width: 100%;
 	height: 100%;
+
+	&[data-withheader='true'] {
+		height: calc(100% - 52px);
+	}
 }
